Fix layout issues on restaurant page.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,9 @@
 .container {
+  display: flex;
   width: 80%;
   height: 80%;
+  justify-content: center;
+  align-items: center;
 }
 
 .container img {
